switched asset previews from CDN for faster refresh

--- a/.branderrc.json
+++ b/.branderrc.json
@@ -287,7 +287,7 @@
   "options": {
     "lineSeparator": "lf",
     "assets": {
-      "url": "https://rawcdn.githack.com/<%= config.repository.user %>/<%= config.repository.name %>/<%= config.repository.branch %>/<%= file %>"
+      "url": "https://raw.githack.com/<%= config.repository.user %>/<%= config.repository.name %>/<%= config.repository.branch %>/<%= file %>"
     },
     "docs": {
       "footer": {
